--- a/design.css
+++ b/design.css
@@ -8,4 +8,11 @@ section
 {
 min-height: 100%;
 background: linear-gradient(to top, rgb(255,255,255), rgb(180,180,180));
+text-align: center;
+}
+
+section form p
+{
+font-size: 1.1em;
+color: red;
 }
